tests/run/error_array_heterogeneous.out
tests/run/error_array_heterogeneous.ig:3:13: error: array elements must all have the same type
