tests/run/error_array_heterogeneous.ig
// error_array_heterogeneous.ig — array elements must share one type.
fn main() -> int {
    let a = [1, "two"]
    return 0
}
